tests/snapshots/pass_lir__snapshot_lir_basic.snap
---
source: tests/pass_lir.rs
expression: lir
---
LirProgram {
    functions: [
        LirFunction {
            name: "main",
            params: [],
            evidence_params: [],
            ret_type: I64,
            requires: Row(
                [],
                None,
            ),
            effects: Row(
                [],
                None,
            ),
            body: [
                Let {
                    name: "x",
                    typ: I64,
                    expr: Atom(
                        Int(
                            42,
                        ),
                    ),
                },
            ],
            ret: Var {
                name: "x",
                typ: I64,
            },
        },
    ],
    externals: [],
}
